yaml/Service-Mesh-2-Security/circuit-breaker/productreviewservice.yml
apiVersion: v1
kind: Service
metadata:
  name: productreviewservice
  namespace: shoppingportal
spec:
  selector: 
    name: productreviewms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
